Fix bar overflow

--- a/src/components/current-activity-display/current-activity-display.css
+++ b/src/components/current-activity-display/current-activity-display.css
@@ -92,6 +92,7 @@
   justify-content: flex-start;
   gap: 5px;
   flex: 1;
+  min-width: 0;
 }
 
 .current-activity-labels-container {
